--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "scripts": {
     "build": "npx tsc",
+    "test": "jest",
     "start": "node dist/server.js",
     "dev": "concurrently \"npx tsc --watch\" \"nodemon -q dist/server.js\""
   },
@@ -17,10 +18,15 @@
     "socket.io": "^4.6.2"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.22.20",
+    "@babel/preset-typescript": "^7.22.15",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.5",
     "concurrently": "^8.2.0",
+    "jest": "^29.7.0",
     "nodemon": "^2.0.22",
+    "ts-jest": "^29.1.1",
     "typescript": "^5.1.3"
   }
 }
