--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "license": "none",
   "dependencies": {
+    "axios": "^1.5.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "ioredis": "^5.3.2",
+    "openai": "^4.11.0",
     "socket.io": "^4.6.2"
   },
   "devDependencies": {
